[package]
name = "dw-rand"
version = "0.2.0"
authors = ["Aaron Pribadi <aaron.pribadi@gmail.com>"]
license = "Artistic-2.0"
edition = "2021"

[dependencies]
getrandom = { version = "0.2.8", optional = true }

[dev-dependencies]
expect-test = "1.4.0"
trivium = { git = "https://github.com/apribadi/trivium" }

[features]
std = []
thread-local = ["getrandom", "std"]
